@@ -124,6 +124,20 @@ void Expression::insert_term_front(const Term& t_) const
 
 /////////////////////////////////////////////////////////////////////////////
 //
+// Expression::remove_term_front
+//
+/////////////////////////////////////////////////////////////////////////////
+
+void Expression::remove_term_front() const
+{
+  delete terms[0]; 
+  terms.erase(terms.begin());
+}
+
+
+
+/////////////////////////////////////////////////////////////////////////////
+//
 // Expression::operator+=
 //
 /////////////////////////////////////////////////////////////////////////////
